tests/snapshots/run_wpt_conformance__coreml_argMin_float16_4D_tensor__axis_0__all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
arg_min_max.https.any.js argMin float16 4D tensor, axis=0, all options, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type reduce_argmin: Output '0' has incorrect type for operator 'ios17.reduce_argmin'. Expected { [...]>, [...]>, tensor<int32, tensor<uint16 }; got tensor<int64, [1, 1, 4, 3]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    argMinInput: f16[2, 1, 4, 3];
  }

  nodes {
    [argMinOutput] = argMin(argMinInput, keepDimensions=true, label="", outputDataType="int64");
  }

  outputs { argMinOutput; }
}
